Refactor GetAllStaffAccountsQueryHandler to take filters and pass them to repo. Introduce new findByUsername method in StaffAccountReadRepo and test it.